add hmtl and read

--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <title>Weather Widget</title>
 </head>
 <body>
-    
+    <div class="widget">
+        <div class="right">
+            <div class="container-hour">
+                <span></span>
+                <span></span>
+            </div>
+
+            <div class="container-date">
+                <span></span>
+            </div>
+        </div>
+        <div class="left">
+            <div class="container-weather">
+
+            </div>
+
+            <div class="container-status">
+                <span>Ar</span>
+                <span>Bateria</span>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
