--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="left">
             <div class="container-weather">
-                <div class="weather-img"><img class="img-weather" src="/assets/bad-weather.png"><span id="show-temp">12°</span></div>
+                <div class="weather-img"><img class="img-weather" src=" "><span id="show-temp">12°</span></div>
                 <span id="local">Vila Jacui, São Pau...</span>
             </div>
 
